Fix some shit
