# docs/swagger.yaml
@@ -101,6 +101,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/resp.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/resp.Response'
         "500":
           description: Internal Server Error
           schema:
@@ -179,6 +183,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/resp.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/resp.Response'
         "500":
           description: Internal Server Error
           schema:
@@ -247,6 +255,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/resp.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/resp.Response'
         "500":
           description: Internal Server Error
           schema:
@@ -270,6 +282,14 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/db.Author'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/resp.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/resp.Response'
       summary: Create an author
       tags:
       - authors
@@ -315,6 +335,10 @@ paths:
             $ref: '#/definitions/db.Author'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/resp.Response'
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/resp.Response'
         "500":
